deploy: ae629ab82c119189c74c9dd5dfdb513564d73be3

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 <li>high-performance verifiable computing use cases, using a custom high-level language called PetraML.</li>
 </ol>
 <p>The VM consists of a basic instruction set and optional instruction set extensions. The arithmetization of the machine enables the prover and verifier to only handle the ISA extensions used by an agreed-upon program.</p>
-<p>The full machine specification can be found <a href="./book/src/specification.html">here</a>.</p>
+<p>The full machine specification can be found <a href="https://petraprover.github.io/PetraVM/specification.html">here</a>.</p>
 <h2 id="documentation"><a class="header" href="#documentation">Documentation</a></h2>
 <p>Documentation is still incomplete and will be improved over time.
 You can go through the <a href="https://petraprover.github.io/PetraVM/">PetraVM book</a>
