deploy: a9b679529474c35174663c8cc4980c27e09e07cf

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ for explanations on the zkVM design and architecture.</p>
 <p><strong>Note:</strong> In PetraVM, variables refer to addresses in VROM (Value ROM, a write-once memory region). Instructions operate on values at these addresses unless specified as "immediate" operations.</p>
 </blockquote>
 <blockquote>
-<p><strong>Note:</strong> Check out our <a href="https://github.com/PetraProver/PetraVM/examples/opcodes.asm">instruction set test suite</a> for a complete overview of supported instructions and their usage.</p>
+<p><strong>Note:</strong> Check out our <a href="https://github.com/PetraProver/PetraVM/tree/main/examples/opcodes.asm">instruction set test suite</a> for a complete overview of supported instructions and their usage.</p>
 </blockquote>
 <h4 id="binary-field-operations"><a class="header" href="#binary-field-operations">Binary Field Operations</a></h4>
 <ul>
@@ -326,20 +326,20 @@ for explanations on the zkVM design and architecture.</p>
 <h2 id="example-programs"><a class="header" href="#example-programs">Example Programs</a></h2>
 <p>The project includes several example programs that demonstrate the capabilities of PetraVM:</p>
 <ul>
-<li><a href="prover/tests/fibonacci.rs">Fibonacci</a>: Prove a Fibonacci number</li>
-<li><a href="prover/test/collatz.rs">Collatz</a>: Prove the Collatz sequence for a given number</li>
+<li><a href="https://github.com/PetraProver/PetraVM/tree/main/prover/tests/fibonacci.rs">Fibonacci</a>: Prove a Fibonacci number</li>
+<li><a href="https://github.com/PetraProver/PetraVM/tree/main/prover/test/collatz.rs">Collatz</a>: Prove the Collatz sequence for a given number</li>
 </ul>
 <h2 id="development-status"><a class="header" href="#development-status">Development Status</a></h2>
 <p>The project is actively developed. Many instructions are already supported by the prover, with new instructions and additional features added regularly.</p>
 <h2 id="crates"><a class="header" href="#crates">Crates</a></h2>
 <ul>
-<li><a href="./assembly"><code>assembly</code></a>: zkVM assembly DSL, parser and program executor</li>
-<li><a href="./prover"><code>prover</code></a>: Circuit definition and proof generation</li>
+<li><a href="https://github.com/PetraProver/PetraVM/tree/main/assembly"><code>assembly</code></a>: zkVM assembly DSL, parser and program executor</li>
+<li><a href="https://github.com/PetraProver/PetraVM/tree/main/prover"><code>prover</code></a>: Circuit definition and proof generation</li>
 </ul>
 <h2 id="license"><a class="header" href="#license">License</a></h2>
-<p>Licensed under Apache 2.0. See <a href="LICENSE">LICENSE</a>.</p>
+<p>Licensed under Apache 2.0. See <a href="https://github.com/PetraProver/PetraVM/tree/main/LICENSE">LICENSE</a>.</p>
 <h2 id="contributing"><a class="header" href="#contributing">Contributing</a></h2>
-<p>The PetraVM project is a collaboration between several teams and welcomes community contributions. Please open issues or pull requests for bugs, features, or improvements. See the <a href="CONTRIBUTING.html">CONTRIBUTING</a> document for guidelines.</p>
+<p>The PetraVM project is a collaboration between several teams and welcomes community contributions. Please open issues or pull requests for bugs, features, or improvements. See the <a href="https://github.com/PetraProver/PetraVM/tree/main/CONTRIBUTING.md">CONTRIBUTING</a> document for guidelines.</p>
 <p>The initial development is led by <a href="https://polygon.technology/">Polygon</a> and <a href="https://www.irreducible.com/">Irreducible</a>.</p>
 <p>We reserve the right to close issues and PRs deemed unnecessary or not bringing sufficient interest.</p>
 
