--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@ for explanations on the zkVM design and architecture.</p>
 <code>ADDI</code> - Integer addition with immediate</li>
 <li><input disabled="" type="checkbox" checked=""/>
 <code>SUB</code> - Integer subtraction</li>
-<li><input disabled="" type="checkbox"/>
+<li><input disabled="" type="checkbox" checked=""/>
 <code>MUL</code> - Signed multiplication</li>
-<li><input disabled="" type="checkbox"/>
+<li><input disabled="" type="checkbox" checked=""/>
 <code>MULI</code> - Signed multiplication with immediate</li>
 <li><input disabled="" type="checkbox"/>
 <code>MULU</code> - Unsigned multiplication</li>
@@ -326,9 +326,16 @@ for explanations on the zkVM design and architecture.</p>
 <h2 id="example-programs"><a class="header" href="#example-programs">Example Programs</a></h2>
 <p>The project includes several example programs that demonstrate the capabilities of PetraVM:</p>
 <ul>
-<li><a href="https://github.com/PetraProver/PetraVM/tree/main/prover/tests/fibonacci.rs">Fibonacci</a>: Prove a Fibonacci number</li>
-<li><a href="https://github.com/PetraProver/PetraVM/tree/main/prover/test/collatz.rs">Collatz</a>: Prove the Collatz sequence for a given number</li>
+<li><a href="https://github.com/PetraProver/PetraVM/tree/main/prover/examples/fibonacci.rs">Fibonacci</a>: Prove a Fibonacci number</li>
+<li><a href="https://github.com/PetraProver/PetraVM/tree/main/prover/examples/collatz.rs">Collatz</a>: Prove the Collatz sequence for a given number</li>
 </ul>
+<h3 id="running-examples"><a class="header" href="#running-examples">Running Examples</a></h3>
+<pre><code class="language-bash"># Calculate and prove the 10th Fibonacci number
+RUSTFLAGS="-C target-cpu=native" cargo run --release --example fibonacci -- -n 10
+
+# Run Collatz conjecture for starting value 7
+RUSTFLAGS="-C target-cpu=native" cargo run --release --example collatz -- -n 7
+</code></pre>
 <h2 id="development-status"><a class="header" href="#development-status">Development Status</a></h2>
 <p>The project is actively developed. Many instructions are already supported by the prover, with new instructions and additional features added regularly.</p>
 <h2 id="crates"><a class="header" href="#crates">Crates</a></h2>
