deploy: 7f601742cf13e15d72d4c1da49fb9f89f1e37467

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ for explanations on the zkVM design and architecture.</p>
 <code>MUL</code> - Signed multiplication</li>
 <li><input disabled="" type="checkbox" checked=""/>
 <code>MULI</code> - Signed multiplication with immediate</li>
-<li><input disabled="" type="checkbox"/>
+<li><input disabled="" type="checkbox" checked=""/>
 <code>MULU</code> - Unsigned multiplication</li>
 <li><input disabled="" type="checkbox"/>
 <code>MULSU</code> - Signed × unsigned multiplication</li>
