--- a/print.html
+++ b/print.html
@@ -256,17 +256,17 @@ for explanations on the zkVM design and architecture.</p>
 </ul>
 <h4 id="comparison-operations"><a class="header" href="#comparison-operations">Comparison Operations</a></h4>
 <ul>
-<li><input disabled="" type="checkbox"/>
+<li><input disabled="" type="checkbox" checked=""/>
 <code>SLT</code> - Set if less than (signed)</li>
-<li><input disabled="" type="checkbox"/>
+<li><input disabled="" type="checkbox" checked=""/>
 <code>SLTI</code> - Set if less than immediate (signed)</li>
 <li><input disabled="" type="checkbox" checked=""/>
 <code>SLTU</code> - Set if less than (unsigned)</li>
 <li><input disabled="" type="checkbox" checked=""/>
 <code>SLTIU</code> - Set if less than immediate (unsigned)</li>
-<li><input disabled="" type="checkbox"/>
+<li><input disabled="" type="checkbox" checked=""/>
 <code>SLE</code> - Set if less than or equal (signed)</li>
-<li><input disabled="" type="checkbox"/>
+<li><input disabled="" type="checkbox" checked=""/>
 <code>SLEI</code> - Set if less than or equal immediate (signed)</li>
 <li><input disabled="" type="checkbox" checked=""/>
 <code>SLEU</code> - Set if less than or equal (unsigned)</li>
