deploy: a39114fc9f2cdfe80f9169633623a7e0e8e1e854

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ for explanations on the zkVM design and architecture.</p>
 <code>MULI</code> - Signed multiplication with immediate</li>
 <li><input disabled="" type="checkbox" checked=""/>
 <code>MULU</code> - Unsigned multiplication</li>
-<li><input disabled="" type="checkbox"/>
+<li><input disabled="" type="checkbox" checked=""/>
 <code>MULSU</code> - Signed × unsigned multiplication</li>
 </ul>
 <h4 id="logic-operations"><a class="header" href="#logic-operations">Logic Operations</a></h4>
