--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@
         <script src="toc.js"></script>
     </head>
     <body>
+    <div id="mdbook-help-container">
+        <div id="mdbook-help-popup">
+            <h2 class="mdbook-help-title">Keyboard shortcuts</h2>
+            <div>
+                <p>Press <kbd>←</kbd> or <kbd>→</kbd> to navigate between chapters</p>
+                <p>Press <kbd>S</kbd> or <kbd>/</kbd> to search in the book</p>
+                <p>Press <kbd>?</kbd> to show this help</p>
+                <p>Press <kbd>Esc</kbd> to hide this help</p>
+            </div>
+        </div>
+    </div>
     <div id="body-container">
         <!-- Work around some values being stored in localStorage wrapped in quotes -->
         <script>
@@ -118,7 +129,7 @@
                             <li role="none"><button role="menuitem" class="theme" id="navy">Navy</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="ayu">Ayu</button></li>
                         </ul>
-                        <button id="search-toggle" class="icon-button" type="button" title="Search. (Shortkey: s)" aria-label="Toggle Searchbar" aria-expanded="false" aria-keyshortcuts="S" aria-controls="searchbar">
+                        <button id="search-toggle" class="icon-button" type="button" title="Search (`/`)" aria-label="Toggle Searchbar" aria-expanded="false" aria-keyshortcuts="/ s" aria-controls="searchbar">
                             <i class="fa fa-search"></i>
                         </button>
                     </div>
@@ -309,6 +320,11 @@ for explanations on the zkVM design and architecture.</p>
 <code>TAILV</code> - Tail call to variable address</li>
 <li><input disabled="" type="checkbox" checked=""/>
 <code>RET</code> - Return from function</li>
+</ul>
+<h4 id="register-operations"><a class="header" href="#register-operations">Register Operations</a></h4>
+<ul>
+<li><input disabled="" type="checkbox" checked=""/>
+<code>FP</code> - Dump current FP value</li>
 </ul>
 <h4 id="future-random-access-memory-extensions"><a class="header" href="#future-random-access-memory-extensions">Future Random-Access Memory Extensions</a></h4>
 <ul>
