deploy: 6fce3e4b8c6928a3129cfca47559c868d1feb753

--- a/print.html
+++ b/print.html
@@ -327,6 +327,13 @@ for explanations on the zkVM design and architecture.</p>
 <li><input disabled="" type="checkbox" checked=""/>
 <code>FP</code> - Dump current FP value</li>
 </ul>
+<h3 id="groestl-primitives"><a class="header" href="#groestl-primitives">Groestl Primitives</a></h3>
+<ul>
+<li><input disabled="" type="checkbox" checked=""/>
+<code>GROESTL256_COMPRESS</code> - <a href="https://www.groestl.info/Groestl.pdf">Groestl</a> compression function</li>
+<li><input disabled="" type="checkbox" checked=""/>
+<code>GROESTL256_OUTPUT</code> - <a href="https://www.groestl.info/Groestl.pdf">Groestl</a> output function</li>
+</ul>
 <h4 id="future-random-access-memory-extensions"><a class="header" href="#future-random-access-memory-extensions">Future Random-Access Memory Extensions</a></h4>
 <ul>
 <li><input disabled="" type="checkbox"/>
